--- a/content/40823122.html
+++ b/content/40823122.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,14 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">階段1-ag7 << <a href='階段1-ag7.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13<br /><h1>stage1-ag14</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">網頁表現：</span></span></p>
-<p><a href="https://github.com/40823125/stage1-ag14"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">stage1-ag14 回購</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><a href="https://40823125.github.io/stage1-ag14"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">stage1-ag14 站點</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></p>
-<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">成員：</span></span></span></p>
-<p><span><a href="http://github.com/40823110/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823110 回購</span></span></a><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span><a href="http://40823110.github.io/cd2021"><span style="vertical-align: inherit;">40823110網站</span></a><span style="vertical-align: inherit;">|</span></span><span> </span><a href="http://40823110.github.io/cd2021"><span style="vertical-align: inherit;"></span></a><span> </span><span style="vertical-align: inherit;"></span></span></p>
-<p><span><a href="http://github.com/40823125/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823125 回購</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span><a href="http://40823125.github.io/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823125網站</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
-<p><span><a href="http://github.com/40823132/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823132 回購</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span><a href="http://40823132.github.io/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823132網站</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
-<br />階段1-ag7 << <a href='階段1-ag7.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13</div>
+    <div id="tipue_search_content">w16-exam << <a href='w16-exam.html'>Previous</a> <br /><h1>40823122</h1>
+<p><a href="https://40823122.github.io/cd2021/content/%E6%88%90%E6%9E%9C.html">成果連結</a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p><br />w16-exam << <a href='w16-exam.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
