--- a/content/階段1.html
+++ b/content/階段1.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
+                     <li><a href='關於.html'>關於</a><li class='has-children'><a href='階段1.html'>階段1</a><ul class='dropdown'><li><a href='階段1-ag7.html'>階段1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='階段2.html'>階段2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='第三階段.html'>第三階段</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,17 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='stage1-ag14.html'>Next</a> >> stage1-ag14<br /><h1>stage1-ag7</h1>
-<p><span>成員:</span></p>
-<p><span><a href="http://github.com/40823129/cd2021">40823129 repo</a> | <a href="http://40823129.github.io/cd2021">40823129 site</a> |</span></p>
-<p><span><a href="http://github.com/40823149/cd2021">40823149 repo</a><span> </span>|<span> </span><a href="http://40823149.github.io/cd2021">40823149 site</a><span> </span>|</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1Ai5WnEFOkU" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Ce8LrFV08nQ" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/LJbF4QvBGBI" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/xIU9ZBy9Iks" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0dQTbPrewiw" title="YouTube video player" width="560">
-<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/bbxsoK3pewI" title="YouTube video player" width="560"></iframe></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/-coEvkexIoo" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/XAn4HYchu20" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ruPTvzIudak" title="YouTube video player" width="560"></iframe></p>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<br />stage1 << <a href='stage1.html'>Previous</a> <a href='stage1-ag14.html'>Next</a> >> stage1-ag14</div>
+    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <a href='階段1-ag7.html'>Next</a> >> 階段1-ag7<br /><h1>階段1</h1>
+<br />關於 << <a href='關於.html'>Previous</a> <a href='階段1-ag7.html'>Next</a> >> 階段1-ag7</div>
         
     <!-- footer -->
       <div class="container">
