--- a/content/40823149.html
+++ b/content/40823149.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
+                     <li><a href='關於.html'>關於</a><li class='has-children'><a href='階段1.html'>階段1</a><ul class='dropdown'><li><a href='階段1-ag7.html'>階段1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='階段2.html'>階段2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='第三階段.html'>第三階段</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,22 +134,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task 2 << <a href='task 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2<br /><h1>40823149</h1>
-<p><span>下載coppeliasim 4.2.0 版本 </span><a href="/get_page/stage3/4.2.0">4.2.0 版<span>.</span></a></p>
+    <div id="tipue_search_content">任務 2 << <a href='任務 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2<br /><h1>40823149</h1>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">下載coppeliasim 4.2.0 版本 </span></span></span><a href="/get_page/stage3/4.2.0"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">4.2.0 版</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">。</span></span></span></a></p>
 <p><span><img alt="" height="77" src="./../images/1620282606823.jpg" width="392"/></span></p>
-<p><span>下載 <a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</a><span><span> </span></span></span></p>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">下載 </span></span><a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</span></span></a><span><span> </span></span></span></p>
 <p><span><span><img alt="" height="30" src="./../images/1620283150785.jpg" width="483"/></span></span></p>
-<p><span><span>將remoteApi.dll / sim.py /simComst.py 複製島bubble 資料夾當中</span></span></p>
+<p><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將remoteApi.dll / sim.py /simComst.py 複製島泡泡數據夾中間</span></span></span></span></p>
 <p><span><span><img alt="" height="274" src="./../images/1620280574522.jpg" width="344"/></span></span></p>
-<p><span><span>將 bubblerote_remoteApi.py 拉進小白框當中<img alt="" height="34" src="./../images/1620283613992.jpg" width="51"/></span></span></p>
+<p><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將 bubblerote_remoteApi.py 拉進小白框在一起</span></span><img alt="" height="34" src="./../images/1620283613992.jpg" width="51"/></span></span></p>
 <p><span><span><img alt="" height="191" src="./../images/1620280596486.jpg" width="395"/></span></span></p>
-<p><span><span>修改內容  {<span>將import vrep修改為 import sim as vrep}</span></span></span></p>
+<p><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">修改內容 {</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將import vrep修改為import sim as vrep}</span></span></span></span></span></p>
 <p><span><span><span><img alt="" height="458" src="./../images/1620281173329.jpg" width="296"/></span></span></span></p>
-<p><span>在小白框按 Tools/go</span></p>
-<p><span>在進入coppeliasim 叫出小車 進行操作</span></p>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">在小白框按工具/去</span></span></span></p>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">在進入coppeliasim叫出小車進行操作</span></span></span></p>
 <p><span><img alt="" height="360" src="./../images/1620280490922.jpg" width="337"/></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/uiuw2wHwx0s" title="YouTube video player" width="560"></iframe></p>
-<br />task 2 << <a href='task 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2</div>
+<br />任務 2 << <a href='任務 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2</div>
         
     <!-- footer -->
       <div class="container">
