--- a/content/stage1-ag13.html
+++ b/content/stage1-ag13.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
+                     <li><a href='關於.html'>關於</a><li class='has-children'><a href='階段1.html'>階段1</a><ul class='dropdown'><li><a href='階段1-ag7.html'>階段1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='階段2.html'>階段2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='第三階段.html'>第三階段</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,17 +134,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag14 << <a href='stage1-ag14.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>stage1-ag13</h1>
+    <div id="tipue_search_content">stage1-ag14 << <a href='stage1-ag14.html'>Previous</a> <a href='階段2.html'>Next</a> >> 階段2<br /><h1>stage1-ag13</h1>
 <p></p>
-<p>組員:</p>
-<p>40823117 潘奕丞</p>
-<p>倉儲:<a href="https://github.com/40823122/cd2021">https://github.com/40823117</a><a href="https://github.com/40823122/cd2021">/cd2021</a></p>
-<p>網頁:<a href="https://40823122.github.io/cd2021/" rel="nofollow">https://40823117.github.io/cd2021/</a></p>
-<p>40823122 吳家凱</p>
-<p>倉儲:<a href="https://github.com/40823122/cd2021">https://github.com/40823122/cd2021</a></p>
-<p>網頁:<a href="https://40823122.github.io/cd2021/" rel="nofollow">https://40823122.github.io/cd2021/</a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組員：</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823117 潘奕丞</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">艾：</span></span><a href="https://github.com/40823122/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> : </span><a href="https://github.com/40823122/cd2021"><span style="vertical-align: inherit;">//github.com/40823117 </span></a></span><a href="https://github.com/40823122/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">/cd2021</span></span></a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">網頁：</span><a href="https://40823122.github.io/cd2021/" rel="nofollow"><span style="vertical-align: inherit;">https</span></a><span style="vertical-align: inherit;"> : </span></span><a href="https://40823122.github.io/cd2021/" rel="nofollow"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//40823117.github.io/cd2021/</span></span></a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823122 吳家凱</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">艾：</span><a href="https://github.com/40823122/cd2021"><span style="vertical-align: inherit;">https</span></a><span style="vertical-align: inherit;"> : </span></span><a href="https://github.com/40823122/cd2021"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//github.com/40823122/cd2021</span></span></a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">網頁：</span><a href="https://40823122.github.io/cd2021/" rel="nofollow"><span style="vertical-align: inherit;">https</span></a><span style="vertical-align: inherit;"> : </span></span><a href="https://40823122.github.io/cd2021/" rel="nofollow"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//40823122.github.io/cd2021/</span></span></a></p>
 <p></p>
-<p>協同修改</p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">協同修改</span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/28QmNMXr9CE" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/NBgmH9LqlUs" width="560"></iframe></p>
 <p></p>
@@ -157,32 +157,32 @@ img.add_border {
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qWmlZQI7C-0" width="560"></iframe></p>
 <p><img alt="" height="267" src="https://40823122.github.io/stage1-ag13/images/messageImage_1615290554039.jpg" width="565"/></p>
-<p>零件檔:<a href="https://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r?usp=sharing">https://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r?usp=sharing</a></p>
-<p><span size="7" style="font-size: 200%;">v-rep模擬</span></p>
-<p><span size="7" style="font-size: 200%;"><a href="https://drive.google.com/file/d/1ISH1jZG0E2IxRb-8SLdFWawTqjqc-uLC/view?usp=sharing">模擬檔</a></span></p>
-<p><span size="7" style="font-size: 200%;">第1次模擬</span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">訂貨檔：</span><a href="https://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r?usp=sharing"><span style="vertical-align: inherit;">https</span></a><span style="vertical-align: inherit;"> ://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r </span><a href="https://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r?usp=sharing"><span style="vertical-align: inherit;">?</span></a><span style="vertical-align: inherit;"> usp </span><a href="https://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r?usp=sharing"><span style="vertical-align: inherit;">=</span></a><span style="vertical-align: inherit;"> sharing</span></span><a href="https://drive.google.com/drive/folders/1Gw2DKXEOqffqAUVHs4KAM4dbICA-9G0r?usp=sharing"><span style="vertical-align: inherit;"></span></a></p>
+<p><span size="7" style="font-size: 200%;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">v-rep模擬</span></span></span></p>
+<p><span size="7" style="font-size: 200%;"><a href="https://drive.google.com/file/d/1ISH1jZG0E2IxRb-8SLdFWawTqjqc-uLC/view?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">模擬檔</span></span></a></span></p>
+<p><span size="7" style="font-size: 200%;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">第1次模擬</span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/K7nktvmF-CI" width="560"></iframe></p>
-<p>啟動的時候發現 日內瓦機構的槽做得不夠深導致運動不完全</p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">啟動的發現神器的槽的時候神深導致運動不完全</span></span></p>
 <p></p>
-<p><span size="7" style="font-size: 200%;">第2次模擬</span></p>
+<p><span size="7" style="font-size: 200%;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">第2次模擬</span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/rcc-KzCBQTk" width="560"></iframe></p>
-<p><span></span>啟動後發現在 INVENTOR畫出來齒輪跟 V-REP模擬出來的有差距</p>
-<p>INVENTOR 畫出來的圓是接近真圓 ，但V-REP模擬出來的是多邊形，再加上齒輪面的完全貼合導致<span>配合上有問題。</span></p>
-<p>所以決定修改齒輪的外接圓直徑以及增加齒輪面之間的間距，再進行模擬。</p>
-<p><span size="7" style="font-size: 200%;">第3次模擬</span></p>
+<p><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">啟動後發現在INVENTOR畫出來跟V-REP模擬出來的有仇</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">INVENTOR畫出來的圓是真圓，但REP模擬出來是貼上的，這和上那些面的完全合導致</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">配合上有問題。</span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">所以不想修改任何一個圓圓的孩子，還有增加一些面子之間的小動作，再進行模擬。</span></span></p>
+<p><span size="7" style="font-size: 200%;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">第3次模擬</span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/55Eqxh8FHyY" width="560"></iframe></p>
-<p><span></span>修改完之後。</p>
-<p>可以發現在選轉帶動上有明顯的優化。</p>
-<p>但是因為增加了間距，讓齒輪之間產生了晃動，導致齒輪的運動軌跡不如預期，無法達成需要的運動。</p>
-<p><span size="7" style="font-size: 200%;">第4次模擬</span></p>
+<p><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">修改完之後。</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">可以發現在選轉上有明顯的優化。</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">但是因為增加了搖晃，讓她產生了動，導致運動的目的不理想，無法實現需要的運動。</span></span></p>
+<p><span size="7" style="font-size: 200%;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">第4次模擬</span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/N0pQNY4S9nY" width="560"></iframe></p>
-<p><span>觀察了第三次模擬</span></p>
-<p><span>決定嘗試在日內瓦齒輪的槽口加上倒角以此來修正晃動所產生的偏差。</span></p>
-<p><span>模擬結果確定了倒角能夠解決晃動產生的偏差。</span></p>
-<p><span size="7" style="font-size: 200%;">第5次模擬(最終版)</span></p>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">觀察了第三次模擬</span></span></span></p>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">決定嬰兒在奶牛的槽口加上倒角來修改晃動所產生的誤差。</span></span></span></p>
+<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">模擬結果確定了倒角能夠解決晃動產生的偏差。</span></span></span></p>
+<p><span size="7" style="font-size: 200%;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">第5次模擬(最終版)</span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/G4Bj2Rfg3Ro" width="560"></iframe></p>
-<p>修改完全部問題後，加入了球體模擬被分類的貨物。</p>
-<br />stage1-ag14 << <a href='stage1-ag14.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">修改完全部問題後，加入了球體模擬被分類的貨物。</span></span></p>
+<br />stage1-ag14 << <a href='stage1-ag14.html'>Previous</a> <a href='階段2.html'>Next</a> >> 階段2</div>
         
     <!-- footer -->
       <div class="container">
