--- a/content/任務1.html
+++ b/content/任務1.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
+                     <li><a href='關於.html'>關於</a><li class='has-children'><a href='階段1.html'>階段1</a><ul class='dropdown'><li><a href='階段1-ag7.html'>階段1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='階段2.html'>階段2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='第三階段.html'>第三階段</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,17 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage2-ag12 << <a href='stage2-ag12.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1<br /><h1>stage3</h1>
-<p>組長:<a href="https://github.com/40823152/stage3-ag6">40823152 repo</a><span> | </span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 site</a><span> |</span></p>
-<p>組員:</p>
-<p><a href="https://github.com/40823110/stage3-ag6">40823110 repo</a><span> | </span><a href="https://40823110.github.io/stage3-ag6/content/index.html">40823110 site</a><span> </span>|</p>
-<p><span><span></span></span><a href="https://github.com/40823125/stage3-ag6">40823125 repo</a><span><a href="https://github.com/40823125/stage3-ag6"><span> </span></a>|<span> </span></span><a href="https://40823125.github.io/stage3-ag6/content/index.html">40823125 site</a><span><span> </span>|</span></p>
-<p><span></span><a href="https://github.com/40823153/stage3-ag6">40823153 repo</a><span><span> </span>|<span> </span></span><a href="https://40823153.github.io/stage3-ag6/content/index.html">40823153 site</a><span><a href="https://40823153.github.io/stage3-ag6/content/index.html"><span> </span></a>|</span></p>
-<p><span><a href="https://github.com/40823117/stage3-ag6">40823117 repo<span> </span></a>|<span> </span><a href="https://40823117.github.io/stage3-ag6/content/index.html">40823117 site</a><span> </span>|</span></p>
-<p><span><a href="https://github.com/40823122/stage3-ag6">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/stage3-ag6/content/index.html">40823122 site</a><span> </span>|</span></p>
-<p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/stage3-ag6/content/index.html">40823129 site</a><span> </span>|</span></p>
-<p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/stage3-ag6/content/index.html">40823149 site<span> </span></a>|</span></p>
-<br />stage2-ag12 << <a href='stage2-ag12.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1</div>
+    <div id="tipue_search_content">第三階段 << <a href='第三階段.html'>Previous</a> <a href='40823125-1.html'>Next</a> >> 40823125-1<br /><h1>任務1</h1>
+<br />第三階段 << <a href='第三階段.html'>Previous</a> <a href='40823125-1.html'>Next</a> >> 40823125-1</div>
         
     <!-- footer -->
       <div class="container">
