--- a/content/階段2.html
+++ b/content/階段2.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
+                     <li><a href='關於.html'>關於</a><li class='has-children'><a href='階段1.html'>階段1</a><ul class='dropdown'><li><a href='階段1-ag7.html'>階段1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='階段2.html'>階段2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='第三階段.html'>第三階段</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7<br /><h1>stage1</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7</div>
+    <div id="tipue_search_content">stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7<br /><h1>階段2</h1>
+<br />stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7</div>
         
     <!-- footer -->
       <div class="container">
