--- a/content/W18.html
+++ b/content/W18.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">任務1 << <a href='任務1.html'>Previous</a> <a href='任務 2.html'>Next</a> >> 任務 2<br /><h1>40823125-1</h1>
-<p><a href="https://40823125.github.io/cd2021/content/task%201.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">任務一教學</span></span></a></p>
-<br />任務1 << <a href='任務1.html'>Previous</a> <a href='任務 2.html'>Next</a> >> 任務 2</div>
+    <div id="tipue_search_content">40823122 << <a href='40823122.html'>Previous</a> <br /><h1>W18</h1>
+<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p><br />40823122 << <a href='40823122.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
