--- a/content/協同流程圖.html
+++ b/content/協同流程圖.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,22 +134,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">任務 2 << <a href='任務 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2<br /><h1>40823149</h1>
-<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">下載coppeliasim 4.2.0 版本 </span></span></span><a href="/get_page/stage3/4.2.0"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">4.2.0 版</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">。</span></span></span></a></p>
-<p><span><img alt="" height="77" src="./../images/1620282606823.jpg" width="392"/></span></p>
-<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">下載 </span></span><a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</span></span></a><span><span> </span></span></span></p>
-<p><span><span><img alt="" height="30" src="./../images/1620283150785.jpg" width="483"/></span></span></p>
-<p><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將remoteApi.dll / sim.py /simComst.py 複製島泡泡數據夾中間</span></span></span></span></p>
-<p><span><span><img alt="" height="274" src="./../images/1620280574522.jpg" width="344"/></span></span></p>
-<p><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將 bubblerote_remoteApi.py 拉進小白框在一起</span></span><img alt="" height="34" src="./../images/1620283613992.jpg" width="51"/></span></span></p>
-<p><span><span><img alt="" height="191" src="./../images/1620280596486.jpg" width="395"/></span></span></p>
-<p><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">修改內容 {</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將import vrep修改為import sim as vrep}</span></span></span></span></span></p>
-<p><span><span><span><img alt="" height="458" src="./../images/1620281173329.jpg" width="296"/></span></span></span></p>
-<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">在小白框按工具/去</span></span></span></p>
-<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">在進入coppeliasim叫出小車進行操作</span></span></span></p>
-<p><span><img alt="" height="360" src="./../images/1620280490922.jpg" width="337"/></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/uiuw2wHwx0s" title="YouTube video player" width="560"></iframe></p>
-<br />任務 2 << <a href='任務 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2</div>
+    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <a href='階段1.html'>Next</a> >> 階段1<br /><h1>協同流程圖</h1>
+<p><span>我認為藉由此流程圖可以降低內容互相覆蓋，最終造成無法辨識是誰更改內容的情況。</span></p>
+<p><span>每一位協同者製作與更改的項目都會顯示在上面，不怕後者更新會覆蓋前者所製作的，還能輕易地找出之前所做的每一項目。</span></p>
+<p><img alt="" height="425" src="./../images/Untitled Diagram(1).png" width="500"/></p>
+<p><span><span></span></span></p><br />關於 << <a href='關於.html'>Previous</a> <a href='階段1.html'>Next</a> >> 階段1</div>
         
     <!-- footer -->
       <div class="container">
