--- a/content/test.html
+++ b/content/test.html
@@ -134,11 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <a href='階段1.html'>Next</a> >> 階段1<br /><h1>協同流程圖</h1>
-<p><span>我認為藉由此流程圖可以降低內容互相覆蓋，最終造成無法辨識是誰更改內容的情況。</span></p>
-<p><span>每一位協同者製作與更改的項目都會顯示在上面，不怕後者更新會覆蓋前者所製作的，還能輕易地找出之前所做的每一項目。</span></p>
-<p><img alt="" height="425" src="./../images/Untitled Diagram(1).png" width="500"/></p>
-<p><span><span></span></span></p><br />關於 << <a href='關於.html'>Previous</a> <a href='階段1.html'>Next</a> >> 階段1</div>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>test</h1>
+<span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span><br />W18 << <a href='W18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
