--- a/config/content.htm
+++ b/config/content.htm
@@ -33,7 +33,7 @@
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">網頁表現：</span></span></p>
 <p><a href="https://github.com/40823125/stage1-ag14">stage1-ag14 repo</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><a href="https://40823125.github.io/stage1-ag14">stage1-ag14 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></p>
 <p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">成員：</span></span></span></p>
-<p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span><a href="http://40823110.github.io/cd2021">40823110 web</a><span style="vertical-align: inherit;">|</span></span><span> </span><a href="http://40823110.github.io/cd2021"><span style="vertical-align: inherit;"></span></a><span> </span><span style="vertical-align: inherit;"></span></span></p>
+<p><span><a href="http://github.com/mde40823110/cd2021">40823110 repo</a><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span><a href="http://mde40823110.github.io/cd2021">40823110 web</a><span style="vertical-align: inherit;">|</span></span><span> </span><a href="http://40823110.github.io/cd2021"><span style="vertical-align: inherit;"></span></a><span> </span><span style="vertical-align: inherit;"></span></span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span><a href="http://40823125.github.io/cd2021">40823125 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
 <p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span><a href="http://40823132.github.io/cd2021">40823132 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p><h2>stage1-ag13</h2>
 <p></p>
@@ -94,12 +94,12 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/tN9ZGCpBWww" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ALvtNH0qoRE" title="YouTube video player" width="560"></iframe></p>
 <h2>stage2-ag12</h2>
-<p><a href="https://github.com/40823152/stage2-ag12">stage2-ag12 repo</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><a href="https://40823125.github.io/stage2-ag12">stage2-ag12 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></p>
+<p><a href="https://github.com/mde40823152/stage2-ag12">stage2-ag12 repo</a> <span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><a href="https://40823125.github.io/stage2-ag12">stage2-ag12 web</a> <span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組員</span></span></p>
-<p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://40823152.github.io/cd2021">40823152 web</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
+<p><span><span> </span></span><a href="http://github.com/mde40823152/cd2021">40823152 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://mde40823152.github.io/cd2021">40823152 web</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
 <p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://40823153.github.io/cd2021">40823153 web</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
 <p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://40823125.github.io/cd2021">40823125 web</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
-<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://40823110.github.io/cd2021">40823110 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></p><h1>stage3</h1>
+<p><span><span> </span></span><a href="http://github.com/mde40823110/cd2021">40823110 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://mde40823110.github.io/cd2021">40823110 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></p><h1>stage3</h1>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組長：</span></span><a href="https://github.com/40823152/stage3-ag6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823152 repo </span></span></a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 web</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組員：</span></span></p>
 <p><a href="https://github.com/40823110/stage3-ag6">40823110 repo</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://40823110.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823110 web</span></span></a><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></p>
@@ -377,10 +377,15 @@
 </table>
 </div>
 </div><h2>w16-exam</h2>
-<h3>40823122</h3>
+<h3>40823125</h3>
+<p><a href="https://40823125.github.io/cd2021/content/MTB%20Onshape.html">MTB Onshape</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/%E5%BB%BA%E7%AB%8B%20CoppeliaSim%204.1.0%20MTB%20robot%20%E5%A0%B4%E6%99%AF.html">建立 CoppeliaSim 4.1.0 MTB robot 場景</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/%E6%89%8B%E8%87%82%E6%9C%AB%E7%AB%AF%E5%8A%A0%E5%85%A5%20components-gripper-suction%20pad%20%E5%90%B8%E7%9B%A4.html">手臂末端加入 components-gripper-suction pad 吸盤</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/%E9%80%86%E5%90%91%E9%81%8B%E5%8B%95%E5%AD%B8%E5%87%BD%E5%BC%8F.html">逆向運動學函式</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/Python%20remote%20API%20%E9%80%86%E5%90%91%E9%81%8B%E5%8B%95%E5%AD%B8%E5%87%BD%E5%BC%8F.html">Python remote API 逆向運動學函式</a></p><h3>40823122</h3>
 <p><a href="https://40823122.github.io/cd2021/content/%E6%88%90%E6%9E%9C.html">成果連結</a></p>
 <h3>40823152</h3>
-<h3>MTB_robot onshape</h3>
+<p>MTB_robot onshape</p>
 <div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"><a href="https://cad.onshape.com/documents/5ecd967d8059699d5f1806dd/w/816b6d8e612f3c457d5d06f1/e/fac187b6b9aa97ddbd594f33">onshape</a></div>
 <div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"></div>
 <div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"><a href="https://drive.google.com/drive/folders/1rw_d0bSfucDR-bU-UGF_kOesLmZ3e8bz?usp=sharing">stl</a></div>
@@ -395,8 +400,7 @@
 <div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"></div>
 <div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/YJeHLYn8JW8" width="560"></iframe></div>
 <div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"></div>
-<div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}">
-<h3>MTB_robot coppeliasim</h3>
+<div class="navbar-document-name" data-original-title="MTB_robot" data-placement="bottom" ng-click="NavbarController.renameDocument($event)" ng-mousedown="NavbarController.onDocumentNameMouseDown($event)" ng-style="{'width': documentNameWidth}"></div><p>MTB_robot coppeliasim</p>
 <p><a href="https://drive.google.com/file/d/1e4IBKKCf9QxITg_2Ll_KuvZJ2OrFpafN/view?usp=sharing">W16_exam.7z</a></p>
 <p>使用老師w15的鍵盤控制，使自己組裝完的MTB_robot可以鍵盤控制。</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="https://www.youtube.com/embed/yTe32IagVHo" width="560"></iframe></p>
@@ -536,7 +540,7 @@
 <p>參考影片:</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="https://www.youtube.com/embed/7zCVTKOZAz8" width="560"></iframe></p>
 <p></p>
-MTB_robot add suction pad
+<p>MTB_robot add suction pad</p>
 <p><span>在coppeliaSim裡的MTB_robot增加吸盤控制。(使用老師的程式)</span></p>
 <p><a href="https://drive.google.com/file/d/1RVBhyeaPE0wK6rfWiWT8fX-o59BdzWlT/view?usp=sharing">W16_exam.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/9Z1ftFAa2Hs" width="560"></iframe></p>
@@ -870,8 +874,7 @@ MTB_robot add suction pad
 <p>如何在cippeliasim裡的MTB_robot安裝吸盤。</p>
 <p><a href="https://drive.google.com/file/d/1f-rxPVZtXuQhjSLpHI0GcYM_041f4ds8/view?usp=sharing">W16_t.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/gAHGWsJEBX0" width="560"></iframe></p>
-<p></p>
-<h3>MTB_robot add IK</h3>
+<p></p><p>MTB_robot add IK</p>
 <p><span>使用老師的逆運動學函式求出終點位置的位移，使MTB_robot在coppeliasim裡可以順利達到老師要求的位置</span></p>
 <p><a href="https://drive.google.com/file/d/1RZlXQc7s2S0KTHCrMFctCLGjw1CaQrey/view?usp=sharing">W16_exam.7z</a> error版本</p>
 <p><a href="https://drive.google.com/file/d/1tYdMH0mz42aooj_nELBVp0T2-S3b73yj/view?usp=sharing">W16_exam.7z</a></p>
@@ -1167,20 +1170,22 @@ MTB_robot add suction pad
 </tbody>
 </table>
 <p></p>
-<h3>MTB_robo use require</h3>
+</div>
+</div><p>MTB_robo use require</p>
 <p>將2到4的步驟新增require操作MTB_robot，並簡單介紹使用方法</p>
 <p><a href="https://drive.google.com/file/d/1IO7JuyYKL4ZT48hqPlX2fGAe-DpHPQh8/view?usp=sharing">W16_exam.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/0Lxmp-umL6U" width="560"></iframe></p>
 <p></p>
-<p><a href="https://github.com/mdecourse/cd2021/tree/main/downloads/stage3/MTB_robot">老師的leo</a></p>
-</div>
-</div>
-</div><h1>W18</h1>
+<p><a href="https://github.com/mdecourse/cd2021/tree/main/downloads/stage3/MTB_robot">老師的leo</a></p><h1>W18</h1>
+<p>圖檔:</p>
 <p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
+<p>感測器:</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
-<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing">final Basketball-Machine</a></p>
+<p>籃框滑軌:</p>
 <p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
 <p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
+<p>完成品:</p>
+<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing">final Basketball-Machine</a></p>
 <p>小組產品:籃球機</p>
 <p>目的:stage2-12的籃球機加上感測器去計分和方軸使籃框左右移動，並且加入w16的Mtb_robot取放球。</p>
 <p>up:擊球桿前進</p>
