--- a/content/40823125.html
+++ b/content/40823125.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a><li><a href='MTB_robot onshape.html'>MTB_robot onshape</a><li><a href='MTB_robot coppeliasim.html'>MTB_robot coppeliasim</a><li><a href='MTB_robot add IK.html'>MTB_robot add IK</a><li><a href='MTB_robo use require.html'>MTB_robo use require</a></li></li></ul></ul><li><a href='W18.html'>W18</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li><a href='W18.html'>W18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,15 +134,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">MTB_robot add IK << <a href='MTB_robot add IK.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>MTB_robo use require</h1>
-<p>將2到4的步驟新增require操作MTB_robot，並簡單介紹使用方法</p>
-<p><a href="https://drive.google.com/file/d/1IO7JuyYKL4ZT48hqPlX2fGAe-DpHPQh8/view?usp=sharing">W16_exam.7z</a></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/0Lxmp-umL6U" width="560"></iframe></p>
-<p></p>
-<p><a href="https://github.com/mdecourse/cd2021/tree/main/downloads/stage3/MTB_robot">老師的leo</a></p>
-</div>
-</div>
-</div><br />MTB_robot add IK << <a href='MTB_robot add IK.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
+    <div id="tipue_search_content">w16-exam << <a href='w16-exam.html'>Previous</a> <a href='40823122.html'>Next</a> >> 40823122<br /><h1>40823125</h1>
+<p><a href="https://40823125.github.io/cd2021/content/MTB%20Onshape.html">MTB Onshape</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/%E5%BB%BA%E7%AB%8B%20CoppeliaSim%204.1.0%20MTB%20robot%20%E5%A0%B4%E6%99%AF.html">建立 CoppeliaSim 4.1.0 MTB robot 場景</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/%E6%89%8B%E8%87%82%E6%9C%AB%E7%AB%AF%E5%8A%A0%E5%85%A5%20components-gripper-suction%20pad%20%E5%90%B8%E7%9B%A4.html">手臂末端加入 components-gripper-suction pad 吸盤</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/%E9%80%86%E5%90%91%E9%81%8B%E5%8B%95%E5%AD%B8%E5%87%BD%E5%BC%8F.html">逆向運動學函式</a></p>
+<p><a href="https://40823125.github.io/cd2021/content/Python%20remote%20API%20%E9%80%86%E5%90%91%E9%81%8B%E5%8B%95%E5%AD%B8%E5%87%BD%E5%BC%8F.html">Python remote API 逆向運動學函式</a></p><br />w16-exam << <a href='w16-exam.html'>Previous</a> <a href='40823122.html'>Next</a> >> 40823122</div>
         
     <!-- footer -->
       <div class="container">
