--- a/content/w16-exam.html
+++ b/content/w16-exam.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a><li><a href='MTB_robot onshape.html'>MTB_robot onshape</a><li><a href='MTB_robot coppeliasim.html'>MTB_robot coppeliasim</a><li><a href='MTB_robot add IK.html'>MTB_robot add IK</a><li><a href='MTB_robo use require.html'>MTB_robo use require</a></li></li></ul></ul><li><a href='W18.html'>W18</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li><a href='W18.html'>W18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">40823152-2 << <a href='40823152-2.html'>Previous</a> <a href='40823122.html'>Next</a> >> 40823122<br /><h1>w16-exam</h1>
-<br />40823152-2 << <a href='40823152-2.html'>Previous</a> <a href='40823122.html'>Next</a> >> 40823122</div>
+    <div id="tipue_search_content">40823152-2 << <a href='40823152-2.html'>Previous</a> <a href='40823125.html'>Next</a> >> 40823125<br /><h1>w16-exam</h1>
+<br />40823152-2 << <a href='40823152-2.html'>Previous</a> <a href='40823125.html'>Next</a> >> 40823125</div>
         
     <!-- footer -->
       <div class="container">
